# tiralabra

./: .flake8  LICENSE  Makefile  README.md  määrittelydokumentti.md  pyproject.toml  testausraportti.md  toteutusraportti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
.github/workflows/: pytest.yml
sketchbook/: image_transform.ipynb
src/: activation_functions.ipynb  activation_funtions.py  backpropagation.py  cost_functions.py  image_transform.ipynb  main.py  model.py  neural_network.ipynb  persistable_model.py  sgd.py  test_activation_functions.py  test_backpropagation.py  test_sgd.py  test_utilities.py  test_utils.py  testing_utils.py  utilities.py
