[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Patrik Keinonen <patrik.keinonen@helsinki.fi>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.25.2"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.25.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
